@@ -1,1 +1,0 @@
-require_generators :mongoid => ['model', 'install']
